base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-dump-api
spec:
  type: ClusterIP
  selector:
    app: mongo-dump-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5050
